--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,18 @@
     margin: 0;
 }
 
+/* body color of white*/
 body {
     background-color: #d9dcd6;
    
 }
 
+/* seo color of white*/
 .seo {
     color: #d9dcd6;
 }
 
+/* header color of blue*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -25,6 +28,7 @@ body {
     font-size: 48px;
 }
 
+/* header floats right*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -36,6 +40,7 @@ body {
 .header nav ul {
     list-style-type: none;
 }
+
 
 .header nav ul li {
     display: inline-block;
@@ -87,22 +92,26 @@ p {
     background-color: #2589bd;
 }
 
+/* combined classes */
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* combined classes */
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* combined classes */
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* combined classes */
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -112,10 +121,12 @@ p {
     color: #ffffff;
 }
 
+/* combined classes */
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
+/* combined classes */
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
